--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,13 @@
-PilotWorkflow/*
-R/*
 R_pipeline/*
 Rplots.pdf
-dask-worker-space/*
 data/*
 downloads/*
-intel/*
-res/*
 sbatch/*
 .*
 .ipynb_checkpoints
 */.ipynb_checkpoints/*
 */__pycache__/*
 !/.gitignore
-Pypath_pipeline/
-pypath_log/
 figs/*
-tmp*
+tmp/*
+old/*
