--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ arboreto==0.1.6
 auto_mix_prep==0.2.0
 colorcet==3.0.0
 distributed==2021.12.0
-joblib==0.14.1
+joblib>=1.2.0
 leidenalg==0.8.8
 matplotlib==3.1.2
 ndex2==3.4.0
